better way to clearfix now that we are avoiding overflow: hidden #7022

--- a/resources/gato-template-txstate2015/css/_maincontent.scss
+++ b/resources/gato-template-txstate2015/css/_maincontent.scss
@@ -28,7 +28,7 @@
 }
 
 .column_paragraph {
-  padding: 0px 0px 4rem 0px;
+  margin: 0px 0px 4rem 0px;
 }
 
 .trail {
